--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -53,7 +53,19 @@
   	<session-timeout>20</session-timeout>
   </session-config>  <!-- 세션의 만료시간을 20분으로 설정 -->
   
-  
+  <!-- POST방식의 한글 깨짐 방지를 위한 필터 설정(필터는 톰켓이 클라이언트의 요청을 처리 전에 걸러서 보냄) -->
+  <filter>
+    <filter-name>SetCharEncoding</filter-name>
+    <filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+      <init-param>
+        <param-name>encoding</param-name>
+        <param-value>utf-8</param-value>
+      </init-param>
+  </filter>
+  <filter-mapping><!-- 맵핑은 위에서 만든 필터를 적용할 범위 설정 -->
+    <filter-name>SetCharEncoding</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   
   
 </web-app>
